--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
 		"react": "^18",
 		"react-day-picker": "8.10.1",
 		"react-dom": "^18",
+		"react-dropzone": "^14.3.5",
 		"react-hook-form": "^7.52.2",
 		"react-redux": "^9.1.2",
 		"react-resizable-panels": "^2.1.1",
