--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
 		"next": "14.2.5",
 		"next-intl": "^3.17.4",
 		"next-themes": "^0.3.0",
+		"pdfjs-dist": "^4.10.38",
 		"react": "^18",
 		"react-day-picker": "8.10.1",
 		"react-dom": "^18",
