--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"test-all": "yarn run check-types && yarn run check-format && yarn run lint && yarn run build"
 	},
 	"dependencies": {
+		"@cyntler/react-doc-viewer": "^1.17.0",
 		"@hookform/resolvers": "^3.9.0",
 		"@radix-ui/react-accordion": "^1.2.0",
 		"@radix-ui/react-alert-dialog": "^1.1.1",
@@ -59,13 +60,11 @@
 		"next": "14.2.5",
 		"next-intl": "^3.17.4",
 		"next-themes": "^0.3.0",
-		"pdfjs-dist": "^4.10.38",
 		"react": "^18",
 		"react-day-picker": "8.10.1",
 		"react-dom": "^18",
 		"react-dropzone": "^14.3.5",
 		"react-hook-form": "^7.52.2",
-		"react-pdf": "^9.2.1",
 		"react-redux": "^9.1.2",
 		"react-resizable-panels": "^2.1.1",
 		"recharts": "^2.12.7",
